# daily-bench

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  nb.ipynb  pyproject.toml
.github/workflows/: benchmark-and-deploy.yml
dashboard/: README.md  index.html  script.js  serve.py  style.css
results/: benchmark_summary.csv
src/daily_bench/: cli.py  exploration.ipynb  extractor.py
src/daily_bench/helm_lite/: run_bench.sh  run_entries_lite_20240424_instruct.conf
tinybench_runner/: cli.py  constants.py  exploration.ipynb  extractor.py  harness.py  run.py  run_entries_lite_20240424_instruct.conf  runner.sh  schema_lite.yaml
