[project]
name = "daily-bench"
version = "0.1.0"
requires-python = ">=3.9"
description = "Daily benchmarking for LLMs"
authors = [
    { name = "Jacob Phillips", email = "jacob.phillips8905@gmail.com" }
]
dependencies = [
    "crfm-helm[models] @ git+https://github.com/jacobphillips99/helm.git@6b915985527323023cb571608f1bea738a89ba94",
    "pandas",
]

[project.scripts]
daily-bench = "daily_bench.cli:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pre-commit",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]
where = ["src"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
